Fix: prevent 'Logo by' from wrapping by updating .uwu-visible

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -744,9 +744,11 @@ ol.mdx-illustration-block {
 .uwu-visible {
   display: none;
 }
-.uwu-hidden {
-  display: flex;
+.uwu .uwu-visible,.uwu-hidden {
+    display: inline-flex !important;
+    flex-wrap: nowrap;
 }
+
 
 .uwu .uwu-visible {
   display: flex;
